# sng-format-python

./: .gitignore  README.md  RELEASE.md  decode.py  encode.py  pyproject.toml  sng.py
.github/workflows/: pylint.yml
src/sng_format/: common.py  decode.py  encode.py
src/sng_parser/: __init__.py  __main__.py  common.py  decode.py  encode.py
src/sng_parser/audio/: __init__.py  convert.py  parallel_transcode.py
src/sng_parser/internal/: transcode.py
