[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sng_parser"
description = "Python library for reading .sng files"
readme = "README.md"
keywords = ["sng", ".sng", "clone hero", "ch", "file", "sng-format", "sng-parse"]
license = {file = "LICENSE"}
version = "0.1.0"
requires-python = ">= 3.10"
authors = [
  {name = "Josh Mcdaniel", email = "80354972+joshrmcdaniel@users.noreply.github.com"},
]
classifiers = [
  "Development Status :: 3 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]

[tool.setuptools.packages.find]
where = ["src/"]
include = ["sng_parser*"]