[build-system]
requires = ["setuptools >= 61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sng_parser"
description = "Python library for reading .sng files"
readme = "README.md"
keywords = ["sng", ".sng", "clone hero", "ch", "file", "sng-format", "sng-parse"]
license = {file = "LICENSE"}
version = "1.2.0-1"
requires-python = ">= 3.10"
dependencies = [ "soundfile==0.12.1", "cffi>=1.0", "numpy",]
authors = [
  {name = "Josh Mcdaniel", email = "80354972+joshrmcdaniel@users.noreply.github.com"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "scalene"
]
[project.urls]
homepage = "https://github.com/joshrmcdaniel/sng-format-python"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sng_parser"]

[project.scripts]
sng_parser = "sng_parser.__main__:main"